# some-algorithm-notes

./: .clang-tidy  .gitignore  CMakeLists.txt  format.sh  main.c
ArithmeticExpressionSolver/: ArithmeticSolver.cpp  CMakeLists.txt
Bellman-Ford/: BellmanFord.cpp  CMakeLists.txt
BinarySearchTree/: BaseBinaryTreeIterator.h  BinarySearchTree.h  BinarySearchTreeNode.h  CMakeLists.txt  InorderIterator.h  PostorderIterator.h  PreorderIterator.h  main.cpp
CircularLinkedList/: CMakeLists.txt  CircularDoublyLinkedList.h  CircularSinglyLinkedList.h  DoublyLinkedListNode.h  SinglyLinkedListNode.h  main.cpp
Contest/: HelloHelloGoodByeBye.c  allSubsets.c  cacaoMilk.c  intervalsLengthMain.c  linearVillageMain.c
Dijkstra/: CMakeLists.txt  Dijkstra.cpp
Fibonacci/: BigInt.hpp  CMakeLists.txt  ffibonacci.cpp  fibonacci.cpp
GraphComponents/: CMakeLists.txt  components.cpp
GraphCycles/: CMakeLists.txt  Cycles.cpp  test.txt
MathFunctionDriver/: CMakeLists.txt  main.cpp
MathFunctionDriver/lib/: basefunction.h  constantfunction.cpp  constantfunction.h  cosfunction.cpp  cosfunction.h  function  polynomialfunction.cpp  polynomialfunction.h  productfunction.cpp  productfunction.h  sinfunction.cpp  sinfunction.h  sqrtfunction.cpp  sqrtfunction.h  sumfunction.cpp  sumfunction.h  termfunction.cpp  termfunction.h
Mathematics/: Polynomials.c  Polynomials.cpp  Polynomials.h
Matrix/: CMakeLists.txt  main.cpp  test.cpp
Matrix-Constexpr/: CMakeLists.txt  Matrix.hpp  main.cpp
Matrix/lib/: Matrix.cpp  Matrix.hpp  MatrixExcepts.cpp  MatrixExcepts.hpp
Parentheses/: CMakeLists.txt  Parentheses.cpp
Polynomials/: CMakeLists.txt  Polynomial.cpp  Polynomial.hpp  main.cpp
Quera-Practice/: CakeOrFake.c  pairs.c  springBox.c
ShortestPath2D/: CMakeLists.txt  graph2D.cpp  graph2D.h  main.cpp
TopologicalSort/: CMakeLists.txt  TopoloSort.cpp  test.txt
TreeCollection/: AVLTree.hpp  BinaryIndexedLinearList.hpp  BinaryIndexedTree.hpp  BinarySearchTree.hpp  BinaryTree.hpp  BinaryTreeIterator.hpp  BinaryTreeNode.hpp  CMakeLists.txt  PureAVLSearchTree.hpp  main.cpp  testgen.py
TreeShortestPath/: CMakeLists.txt  tree.cpp
(+2 files in other folders)
