cmake_minimum_required(VERSION 3.29)
project(Quera)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "Debug")

if(MINGW AND WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++ -static-libgcc")
endif ()
add_subdirectory(Bellman-Ford)
add_subdirectory(ShortestPath2D)
add_subdirectory(Dijkstra)
add_subdirectory(Fibonacci)
add_subdirectory(TopologicalSort)
add_subdirectory(GraphComponents)
add_subdirectory(GraphCycles)
add_subdirectory(TreeShortestPath)
add_subdirectory(Parentheses)