cmake_minimum_required(VERSION 3.27...3.29)
project(SomeAlgorithmNotes)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(Bellman-Ford)
add_subdirectory(ShortestPath2D)
add_subdirectory(Dijkstra)
add_subdirectory(Fibonacci)
add_subdirectory(TopologicalSort)
add_subdirectory(GraphComponents)
add_subdirectory(GraphCycles)
add_subdirectory(TreeShortestPath)
add_subdirectory(Parentheses)
add_subdirectory(ArithmeticExpressionSolver)
add_subdirectory(Matrix)
add_subdirectory(Polynomials)
add_subdirectory(MathFunctionDriver)
add_subdirectory(Matrix-Constexpr)

add_subdirectory(googletest)